--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_create_account">CreateAccountActivity</string>
     <string name="swtich_button">Swtich Button</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
